@@ -15,7 +15,8 @@ MINOR:
   * addFormants(): support for user-specified "spectralEnvelope" (a new argument)
   * soundgen(): adjusted bandwidth calculation for very low formant frequencies (under 250 Hz)
   * soundgen_app(): fixed a bug introduced in 1.3.0 that caused the app to crash when switching to a new preset
-  * updated vignettes and documentation of all exported functions
+  * soundgen_app(): proper plotting of amplGlobal and spectrogram view of formantsNoise
+  * Updated vignettes and documentation of all exported functions
 
 
           CHANGES IN SOUNDGEN VERSION 1.3.0 [31-August-2018]
